--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;600;800&display=swap');
+
+*{
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  font-family: 'Source Sans 3', sans-serif;
+  background-color: var(--main-bg);
+  color: var(--main-color) !important;
+}
+:root{
+  --main-bg : #141b2d;
+  --sec-bg:#1F2A40;
+  --main-color: #e0e0e0;
+  --sec-color: #00C49F;
+  /* --trd-color: #a3a3a3; */
+  --main-trans : .3s;
+  --hover-color:#868dfb;
+}
+/* font-color >> grey 100
+  box-bg >> primery 400
+  hover item >> #868dfb
+*/
+
+.App{
+  display: flex;
+  height: 100vh;
+}
+section{
+  padding: 6px 20px 6px 0;
+}
+main{
+  flex: 1;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a{
+  text-decoration: none;
 }
+svg,h4{
+  color: var(--sec-color);
+}
+button {
+  background-color: transparent !important;
+  border: none !important;
+  transition: var(--main-trans) !important;
+  color:var(--main-color) !important;
+  text-align: start !important;
+  font-weight: 600 !important;
+  letter-spacing: 1px !important;
+}
+/* .box{
+  padding: 20px 12px;
+  border-radius: 8px;
+} */
+/* canvas{
+  width: 120px !important;
+  height: 120px !important;
+} */
+/* canvas ~ div{ 
+  display: none !important;
+} */
